compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_print_unbound_type_variable_names.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 1002
expression: "\nfn make_ok(value: some_type) {\n  let result = Ok(value)\n  result\n}\n"
---
fn make_ok(value: some_type) {
  let result = Ok(value)
      ▔▔↑▔▔▔            
  result
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nResult(some_type, a)\n```\n",
    ),
)
