compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_print_underlying_for_alias_with_parameters.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 1184
expression: "\ntype LocalResult = Result<String, Int>\n\nfn do_thing() -> LocalResult {\n  Error(1)\n}\n"
---
type LocalResult = Result<String, Int>

fn do_thing() -> LocalResult {
▔▔▔↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  
  Error(1)
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nfn() -> Result(String, Int)\n```\n",
    ),
)
