compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_print_underlying_for_imported_alias.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport alias.{type A}\n\nfn wibble() -> Result<Int, String> {\n  todo\n}\n"
---
import alias.{type A}

fn wibble() -> Result<Int, String> {
▔▔▔▔▔▔▔↑▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔  
  todo
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nfn() -> Result(Int, String)\n```\n",
    ),
)
