compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_shadowed_prelude_type.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nrecord Int { Int }\nconst number = 100\n"
---
record Int { Int }
const number = 100
▔▔▔▔▔▔▔▔▔↑▔▔      


----- Hover content -----
Scalar(
    String(
        "```rakun\nrakun.Int\n```\n",
    ),
)
