compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_shadowed_prelude_type_imported.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 1068
expression: "\nimport numbers.{type Int}\nconst number = 100\n"
---
import numbers.{type Int}
const number = 100
▔▔▔▔▔▔▔▔▔↑▔▔      


----- Hover content -----
Scalar(
    String(
        "```rakun\nrakun.Int\n```\n",
    ),
)
