compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_type_constructor_annotation.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nrecord Wibble {\n    Wibble(arg: String)\n}\n"
---
record Wibble {
    Wibble(arg: String)
                ▔▔▔▔↑▔ 
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nString\n```\n",
    ),
)
