compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_variable_in_use_expression.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nfn b(fun: fn(Int) -> String) {\n  fun(42)\n}\n\nfn do_stuff() {\n  let c = \"done\"\n\n  use a <- b\n  c\n}\n"
---
fn b(fun: fn(Int) -> String) {
  fun(42)
}

fn do_stuff() {
  let c = "done"

  use a <- b
      ↑     
  c
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nInt\n```",
    ),
)
