compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__hover__hover_variable_in_use_expression_1.snap
---
source: compiler-core/src/language_server/tests/hover.rs
assertion_line: 467
expression: "\nfn b(fun: fn(Int) -> String) {\n  fun(42)\n}\n\nfn do_stuff() {\n  let c = \"done\"\n\n  use a <- b\n  c\n}\n"
---
fn b(fun: fn(Int) -> String) {
  fun(42)
}

fn do_stuff() {
  let c = "done"

  use a <- b
           ↑
  c
}


----- Hover content -----
Scalar(
    String(
        "```rakun\nfn(fn(Int) -> String) -> String\n```\n",
    ),
)
